// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateButtons component should correctly highlight date from and date to 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  color: #333333;
  font-size: 13px;
  font-weight: 600;
  line-height: 18px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32.85px;
  height: 32px;
  border: none;
  border-radius: 4px;
  background-color: #ffffff;
  cursor: pointer;
  -webkit-transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
}

.c1:enabled:hover {
  background-color: #f1f1f1;
  border-radius: 8px;
  color: #333333;
}

.c1:disabled {
  cursor: default;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32.85px;
  height: 32px;
  border: none;
  border-radius: 4px;
  background-color: #ffffff;
  cursor: pointer;
  -webkit-transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  border: solid 1px blue;
}

.c2:enabled:hover {
  background-color: #f1f1f1;
  border-radius: 8px;
  color: #333333;
}

.c2:disabled {
  cursor: default;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32.85px;
  height: 32px;
  border: none;
  border-radius: 4px;
  background-color: #ffffff;
  cursor: pointer;
  -webkit-transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  background-color: rgba(47,128,237,0.6);
  color: #ffffff;
  border-radius: 8px 0px 0px 8px;
}

.c3:enabled:hover {
  background-color: #f1f1f1;
  border-radius: 8px;
  color: #333333;
}

.c3:disabled {
  cursor: default;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32.85px;
  height: 32px;
  border: none;
  border-radius: 4px;
  background-color: #ffffff;
  cursor: pointer;
  -webkit-transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  background-color: rgba(47,128,237,0.1);
  color: #2f80ed;
}

.c4:enabled:hover {
  background-color: #f1f1f1;
  border-radius: 8px;
  color: #333333;
}

.c4:disabled {
  cursor: default;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32.85px;
  height: 32px;
  border: none;
  border-radius: 4px;
  background-color: #ffffff;
  cursor: pointer;
  -webkit-transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  background-color: rgba(47,128,237,0.1);
  color: #2f80ed;
  color: red;
}

.c5:enabled:hover {
  background-color: #f1f1f1;
  border-radius: 8px;
  color: #333333;
}

.c5:disabled {
  cursor: default;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32.85px;
  height: 32px;
  border: none;
  border-radius: 4px;
  background-color: #ffffff;
  cursor: pointer;
  -webkit-transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  background-color: #2f80ed;
  color: #ffffff;
  border-radius: 0px 8px 8px 0px;
}

.c6:enabled:hover {
  background-color: #f1f1f1;
  border-radius: 8px;
  color: #333333;
}

.c6:disabled {
  cursor: default;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32.85px;
  height: 32px;
  border: none;
  border-radius: 4px;
  background-color: #ffffff;
  cursor: pointer;
  color: #aaaaaa;
  -webkit-transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
}

.c7:enabled:hover {
  background-color: #f1f1f1;
  border-radius: 8px;
  color: #333333;
}

.c7:disabled {
  cursor: default;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32.85px;
  height: 32px;
  border: none;
  border-radius: 4px;
  background-color: #ffffff;
  cursor: pointer;
  color: #aaaaaa;
  -webkit-transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  border: solid 1px blue;
}

.c8:enabled:hover {
  background-color: #f1f1f1;
  border-radius: 8px;
  color: #333333;
}

.c8:disabled {
  cursor: default;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
      data-testid="date-button"
    >
      1
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      2
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      3
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      4
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      5
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      6
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      7
    </button>
    <button
      class="c3"
      data-testid="date-button"
    >
      8
    </button>
    <button
      class="c4"
      data-testid="date-button"
    >
      9
    </button>
    <button
      class="c4"
      data-testid="date-button"
    >
      10
    </button>
    <button
      class="c5"
      data-testid="date-button"
    >
      11
    </button>
    <button
      class="c6"
      data-testid="date-button"
    >
      12
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      13
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      14
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      15
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      16
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      17
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      18
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      19
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      20
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      21
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      22
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      23
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      24
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      25
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      26
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      27
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      28
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      29
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      30
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      31
    </button>
    <button
      class="c7"
      data-testid="date-button"
    >
      1
    </button>
    <button
      class="c7"
      data-testid="date-button"
    >
      2
    </button>
    <button
      class="c8"
      data-testid="date-button"
    >
      3
    </button>
    <button
      class="c8"
      data-testid="date-button"
    >
      4
    </button>
    <button
      class="c7"
      data-testid="date-button"
    >
      5
    </button>
    <button
      class="c7"
      data-testid="date-button"
    >
      6
    </button>
    <button
      class="c7"
      data-testid="date-button"
    >
      7
    </button>
    <button
      class="c7"
      data-testid="date-button"
    >
      8
    </button>
    <button
      class="c7"
      data-testid="date-button"
    >
      9
    </button>
    <button
      class="c8"
      data-testid="date-button"
    >
      10
    </button>
    <button
      class="c8"
      data-testid="date-button"
    >
      11
    </button>
  </div>
</div>
`;

exports[`DateButtons component should render DateButtons component 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  color: #333333;
  font-size: 13px;
  font-weight: 600;
  line-height: 18px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32.85px;
  height: 32px;
  border: none;
  border-radius: 4px;
  background-color: #ffffff;
  cursor: pointer;
  -webkit-transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
}

.c1:enabled:hover {
  background-color: #f1f1f1;
  border-radius: 8px;
  color: #333333;
}

.c1:disabled {
  cursor: default;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32.85px;
  height: 32px;
  border: none;
  border-radius: 4px;
  background-color: #ffffff;
  cursor: pointer;
  -webkit-transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  border: solid 1px blue;
}

.c2:enabled:hover {
  background-color: #f1f1f1;
  border-radius: 8px;
  color: #333333;
}

.c2:disabled {
  cursor: default;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32.85px;
  height: 32px;
  border: none;
  border-radius: 4px;
  background-color: #ffffff;
  cursor: pointer;
  -webkit-transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  color: red;
}

.c3:enabled:hover {
  background-color: #f1f1f1;
  border-radius: 8px;
  color: #333333;
}

.c3:disabled {
  cursor: default;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32.85px;
  height: 32px;
  border: none;
  border-radius: 4px;
  background-color: #ffffff;
  cursor: pointer;
  color: #aaaaaa;
  -webkit-transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
}

.c4:enabled:hover {
  background-color: #f1f1f1;
  border-radius: 8px;
  color: #333333;
}

.c4:disabled {
  cursor: default;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32.85px;
  height: 32px;
  border: none;
  border-radius: 4px;
  background-color: #ffffff;
  cursor: pointer;
  color: #aaaaaa;
  -webkit-transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  transition: background-color 0.3s,border-radius 0.3s,color 0.3s;
  border: solid 1px blue;
}

.c5:enabled:hover {
  background-color: #f1f1f1;
  border-radius: 8px;
  color: #333333;
}

.c5:disabled {
  cursor: default;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
      data-testid="date-button"
    >
      1
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      2
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      3
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      4
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      5
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      6
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      7
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      8
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      9
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      10
    </button>
    <button
      class="c3"
      data-testid="date-button"
    >
      11
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      12
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      13
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      14
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      15
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      16
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      17
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      18
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      19
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      20
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      21
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      22
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      23
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      24
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      25
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      26
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      27
    </button>
    <button
      class="c2"
      data-testid="date-button"
    >
      28
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      29
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      30
    </button>
    <button
      class="c1"
      data-testid="date-button"
    >
      31
    </button>
    <button
      class="c4"
      data-testid="date-button"
    >
      1
    </button>
    <button
      class="c4"
      data-testid="date-button"
    >
      2
    </button>
    <button
      class="c5"
      data-testid="date-button"
    >
      3
    </button>
    <button
      class="c5"
      data-testid="date-button"
    >
      4
    </button>
    <button
      class="c4"
      data-testid="date-button"
    >
      5
    </button>
    <button
      class="c4"
      data-testid="date-button"
    >
      6
    </button>
    <button
      class="c4"
      data-testid="date-button"
    >
      7
    </button>
    <button
      class="c4"
      data-testid="date-button"
    >
      8
    </button>
    <button
      class="c4"
      data-testid="date-button"
    >
      9
    </button>
    <button
      class="c5"
      data-testid="date-button"
    >
      10
    </button>
    <button
      class="c5"
      data-testid="date-button"
    >
      11
    </button>
  </div>
</div>
`;
